# pagekit

./: .gitignore  AGENTS.md  Cargo.toml  README.md  domain.toml  handoff.md  workspace.yaml
.migrated/: README.md
connectors/site-health-audit/: README.md  audit.py
docs/: core-vs-opinion.md
specs/: apply-rules.md  mv-asset.md  pagekit.md  rename-assets.md
sprints/2026-05-correctness-checks/: README.md
sprints/2026-05-query-layer/: README.md
sprints/2026-05-retrieval-composition/: README.md
sprints/2026-05-variant-aware-sync/: README.md  arc.md
src/: a11y.rs  apply_rules.rs  assets.rs  check_strict.rs  config.rs  css_refs.rs  extract.rs  init.rs  inventory.rs  links.rs  main.rs  mv_asset.rs  normalize.rs  preflight.rs  rename_assets.rs  report.rs  seo.rs  show.rs  transforms.rs
tasks/: arc.md
tests/: integration.rs
todo/: 2026-06-02-dogfood-knowledge-base.md  2026-06-02-dogfood-weknowaeo.md
