[package]
name = "pagekit"
version = "0.1.0"
edition = "2021"
description = "Vanilla HTML + CSS site management for agents. Composes fragments core."

[[bin]]
name = "pagekit"
path = "src/main.rs"

[dependencies]
fragments = { path = "../fragments" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
scraper = "0.22"

[dev-dependencies]
tempfile = "3"
